data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_285.wast
;; 6. **Test with a loop containing `nop` and an `if` structure with `br 1`**:    - **Constraint**: Checks if `nop` affects the `if` statement branching logic within loops.    - **Relation to Infinite Loops**: Errors in handling would prevent the branch from breaking out, leading to infinite loops.

(assert_invalid
  (module
    (func (loop (if (nop) (br 1)))))
  "type mismatch"
)